--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <button id="btnStart" onclick="timeStart()">Baslat</button>
 
     <script src="js/date.js"></script>
+    <script src="js/errorHandling.js"></script>
 </body>
 </html>
